--- a/MediaBackupManager/View/CreateBackupSetView.xaml
+++ b/MediaBackupManager/View/CreateBackupSetView.xaml
@@ -37,7 +37,7 @@
             <Label Grid.Row="0" Grid.Column="0"
                    Content="{Binding Title}" 
                    Style="{StaticResource Title}"/>
-            <Separator Grid.Row="0" Grid.Column="0" VerticalAlignment="Bottom"/>
+            <Separator Grid.Row="0" Grid.Column="0" VerticalAlignment="Bottom" Background="DimGray" />
             <!--Label, Path and path picker-->
             <Grid Grid.Row="1" Grid.Column="0" Margin="0,20"
                 IsEnabled="{Binding Path=IsScanInProgressOrCompleted, Converter={StaticResource InvertBool}}">
