--- a/MediaBackupManager/Styles/ResourceDictionary.xaml
+++ b/MediaBackupManager/Styles/ResourceDictionary.xaml
@@ -3,13 +3,24 @@
                     xmlns:local="clr-namespace:MediaBackupManager"
                     >
 
+    <Style TargetType="CheckBox">
+        <Setter Property="Foreground" Value="DimGray" />
+    </Style>
+
     <Style TargetType="Label">
         <Setter Property="VerticalAlignment" Value="Bottom" />
+        <Setter Property="Foreground" Value="DimGray" />
     </Style>
 
     <Style TargetType="Label" x:Key="Title">
         <Setter Property="FontSize" Value="20" />
         <Setter Property="VerticalAlignment" Value="Bottom" />
+    </Style>
+
+    <Style TargetType="Label" x:Key="BackupSetTitle">
+        <Setter Property="FontSize" Value="20" />
+        <Setter Property="VerticalAlignment" Value="Bottom" />
+        <Setter Property="Foreground" Value="#FF2CA8FF" />
     </Style>
 
     <Style TargetType="TextBox">
