--- a/MediaBackupManager/Styles/ResourceDictionary.xaml
+++ b/MediaBackupManager/Styles/ResourceDictionary.xaml
@@ -4,12 +4,12 @@
                     >
 
     <Style TargetType="CheckBox">
-        <Setter Property="Foreground" Value="DimGray" />
+        <Setter Property="Foreground" Value="#FF303030" />
     </Style>
 
     <Style TargetType="Label">
         <Setter Property="VerticalAlignment" Value="Bottom" />
-        <Setter Property="Foreground" Value="DimGray" />
+        <Setter Property="Foreground" Value="#FF303030" />
     </Style>
 
     <Style TargetType="Label" x:Key="Title">
