--- a/MediaBackupManager/View/DirectoryBrowserView.xaml
+++ b/MediaBackupManager/View/DirectoryBrowserView.xaml
@@ -57,13 +57,13 @@
             <Button x:Name="btnRemoveBackupSet" Content="Remove Directory" Command="{Binding RemoveBackupSetCommand}" Style="{DynamicResource HeaderButton}" />-->
         </StackPanel>
 
-        <Separator Grid.Row="0"  Grid.Column="0" Grid.ColumnSpan="3" VerticalAlignment="Bottom" Background="DimGray" />
+        <Separator Grid.Row="0"  Grid.Column="0" Grid.ColumnSpan="3" VerticalAlignment="Bottom" Background="#FF303030" />
 
         <!--Show files without backup-->
         <CheckBox x:Name="ToggleTreeViewHighlights" Grid.Row="1" Grid.Column="0"  Content="Show files without backup" 
                   IsChecked="{Binding HighlightMissingBackupFiles}" VerticalAlignment="Center" />
 
-        <Separator Grid.Row="1"  Grid.Column="0" Grid.ColumnSpan="3" VerticalAlignment="Bottom" Background="DimGray" />
+        <Separator Grid.Row="1"  Grid.Column="0" Grid.ColumnSpan="3" VerticalAlignment="Bottom" Background="#FF303030" />
         
         <!--Directory Tree-->
         <TreeView x:Name="treeDirectory" Grid.Row="2"  Grid.Column="0" Margin="2" MinWidth="50"
@@ -71,7 +71,7 @@
                   SelectedItemChanged="treeDirectory_SelectedItemChanged" >
             <TreeView.Resources>
                 <SolidColorBrush x:Key="{x:Static SystemColors.HighlightBrushKey}" Color="#FFAFECFF" />
-                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="DimGray" />
+                <SolidColorBrush x:Key="{x:Static SystemColors.HighlightTextBrushKey}" Color="#FF303030" />
             </TreeView.Resources>
             <TreeView.ItemTemplate>
                 <HierarchicalDataTemplate DataType="{x:Type viewmodel:FileDirectoryViewModel}" 
@@ -152,7 +152,7 @@
                         </Style>
                     </TextBox.Style>
                 </TextBox>
-                <Path Style="{StaticResource appbar_magnify}" Height="18" Width="18" Fill="DimGray"/>
+                <Path Style="{StaticResource appbar_magnify}" Height="18" Width="18" Fill="#FF303030"/>
             </StackPanel>
 
         </Grid>
